# fastapi_backend_template

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 2025_04_18_0001-d2a3e16acd64_init.py  6b4df5aace1e_anywaypc.py
src/: init.py  main.py  routers.py
src/application/users/: auth_user.py  dto.py  register_user.py
src/common/: base_entity.py  base_event.py  base_exception.py  base_schemas.py  base_value_object.py  configuration.py  exceptions.py  logging_conf.py
src/core/: base_model.py  base_repository.py  base_schema.py  base_schemas.py  configuration.py  database.py  db_session.py  exceptions.py  jwt_auth.py  logging_conf.py
src/di/: auth_dependencies.py
src/domains/auth/: auth_service.py  dependencies.py  exceptions.py  password_service.py  routers.py  schemas.py  services.py
src/domains/auth/commands/: auth_data.py
src/domains/auth/value_objects/: __init__.py  password.py  username.py
src/domains/users/: dependencies.py  exceptions.py  models.py  repositories.py  routers.py  schemas.py  services.py
src/domains/users/entities/: __init__.py  user.py
src/domains/users/interfaces/: user_repository.py
src/domains/users/value_objects/: __init__.py  email.py
src/infrastructure/auth/: jwt_service.py
src/infrastructure/database/: base_model.py  base_repository.py  connection.py  unit_of_work.py
src/infrastructure/database/models/: user.py
src/infrastructure/database/repositories/: __init__.py  user_repository.py
src/presentation/user/: auth_router.py  dependecies.py  schemas.py  security.py
