[tool.poetry]
name = "fastapi-backend-template"
version = "0.1.0"
description = "Базовый шаблон FastAPI приложений"
authors = ["Курдюмов Максим Олегович <dfrozzze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
pydantic = {extras = ["email"], version = "^2.11.2"}
redis-async = "^0.0.1"
alembic = "^1.15.2"
pydantic-settings = "^2.8.1"
asyncpg = "^0.30.0"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = "^1.7.4"
bcrypt = "^4.3.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pre-commit = "^4.0.1"
mypy = "^1.13.0"
colorlog = "^6.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "UP", # pyupgrade
    "I",
]
ignore = ["F401", "E712"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "seed_data",
]

[tool.ruff.pydocstyle]
convention = "google"